Documentation Update for 2.6.0

--- a/documentation/documents/basics/index.html
+++ b/documentation/documents/basics/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 2.4.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 2.6.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -92,7 +92,7 @@
 			      	<div id="main-pane">
 			      		<!--Title: Document Basics-->
 <p>These are the most common tasks that you'll perform on a daily basis with Marten:</p>
-<ul class="table-of-contents"><li><a href="/marten/documentation/documents/basics/persisting">Storing Documents and Unit Of Work</a></li><li><a href="/marten/documentation/documents/basics/loading">Loading Documents by Id</a></li><li><a href="/marten/documentation/documents/basics/deleting">Deleting Documents</a></li><li><a href="/marten/documentation/documents/basics/bulk_insert">Bulk Insert</a></li></ul>
+<ul class="table-of-contents"><li><a href="/marten/documentation/documents/basics/persisting">Storing Documents and Unit Of Work</a></li><li><a href="/marten/documentation/documents/basics/loading">Loading Documents by Id</a></li><li><a href="/marten/documentation/documents/basics/deleting">Deleting Documents</a></li><li><a href="/marten/documentation/documents/basics/bulk_insert">Bulk Insert</a></li><li><a href="/marten/documentation/documents/basics/initial_data">Initial Data</a></li></ul>
 
 			      	</div>
 
