--- a/documentation/documents/index.html
+++ b/documentation/documents/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 2.4.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 2.6.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -108,6 +108,7 @@ Marten will build new database tables and functions for each new document type a
 <li><a href="/marten/documentation/documents/customizing">Customizing Document Storage</a></li>
 <li><a href="/marten/documentation/documents/json">Json Serialization</a></li>
 <li><a href="/marten/documentation/documents/basics/bulk_insert">Bulk Insert</a></li>
+<li><a href="/marten/documentation/documents/basics/initial_data">Initial Data</a></li>
 <li><a href="/marten/documentation/documents/advanced/optimistic_concurrency">Optimistic Concurrency</a></li>
 <li><a href="/marten/documentation/documents/diagnostics">Diagnostics and Instrumentation</a></li>
 <li><a href="/marten/documentation/documents/advanced/cleaning">Tearing Down Document Storage</a></li>
